# library_db

./: Dockerfile  README.md  app.py  di.py  docker-compose.yaml  main.py  pyproject.toml  repositories.py  schemas.py
alembic/: env.py
controllers/: author.py  book.py  order.py  reader.py
crud/: reader.py
db/: engine.py
db/db-init/: init_scheme.sql
db/db_init/: init_scheme.sql
scripts/: entrypoint.sh  init.sh
scripts/db/: init.sh
src/app/: Dockerfile  di.py  log.ini  main.py  repositories.py  schemas.py
src/app/alembic/: env.py
src/app/alembic/versions/: 82739f8afe93_init.py
src/app/controllers/: author.py  book.py  custom_queries.py  order.py  reader.py
src/app/crud/: author.py  book.py  order.py
src/app/custom_queries/: authors_and_readers.py  cte.py  orders_nulls.py  orders_with_number.py
src/app/db/: models.py
src/app/db/db-init/: fake_data.sql
src/app/repositories/: __init__.py  author.py  book.py  order.py  reader.py
src/app/scripts/: entrypoint.sh
